--- a/Academia/web/cadastrarFicha.xhtml
+++ b/Academia/web/cadastrarFicha.xhtml
@@ -24,6 +24,11 @@
                     alerta.style.display = "block";
                 }
             });
+            
+            function dismiss(){
+                var alerta = document.getElementById("alerta");
+                alerta.style.display = "none";
+            }
         </script>
     </h:head>
     <h:body>
