--- a/Academia/web/professorVerFicha.xhtml
+++ b/Academia/web/professorVerFicha.xhtml
@@ -8,21 +8,49 @@
         <link rel="shortcut icon" type="image/x-icon" href="#{resource['images/favicon.ico']}"/>
         <h:outputStylesheet library="css" name="style.css"  />
         <link href='https://fonts.googleapis.com/css?family=Lato:400,700,300' rel='stylesheet' type='text/css'></link>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+        <script>
+            $('document').ready(function() {
+                var alerta = document.getElementById("alerta");
+                var mensagem = document.getElementById("alertaMensagem");
+                var a = $('#alertamsg').length;
+                var b = Number(a);
+                if(b===0){
+                    return;
+                }else{
+                    textou = $('#alertamsg').text();
+                    mensagem.innerHTML = textou;
+                    alerta.style.display = "block";
+                }
+            });
+            
+            function dismiss(){
+                var alerta = document.getElementById("alerta");
+                alerta.style.display = "none";
+            }
+        </script>
     </h:head>
     <h:body>
         <!-- Isso é um stub, a parte que adiciona o exercicio na ficha do aluno -->
+        <h:outputText  id="alertamsg" value="#{sessionScope['msg']}" rendered="#{sessionScope['msg']!=null}" style="display:none"/>
+        
+        <div id="alerta">
+            <div>
+                <span><p>Alerta</p></span>
+                <p id="alertaMensagem"></p>
+                <button onclick="return dismiss();">OK</button>
+            </div>
+        </div>
         <h:form>
             <div class="formHeader">
                 <h2>Escolha o aluno</h2>
                 <a href="homeProfessor.xhtml">Menu</a>
             </div>
             <h:selectOneMenu id ="combo2" class="full-select" value="#{ProfessorFichaBean.alunoSelecionado}" onchange="submit()" valueChangeListener = "#{ProfessorFichaBean.getFichasAluno}" required="true">
-                <f:selectItem noSelectionOption="Selecione" itemValue = "Selecione um aluno"/>
                 <f:selectItems value="#{ProfessorFichaBean.alunosNomes}"/>
             </h:selectOneMenu><br/><br/>
             <h2>Escolha a Ficha</h2>
             <h:selectOneMenu id="combo" class="full-select" value="#{ProfessorFichaBean.fichaSelecionada}" required="true" onchange="submit()">
-                <f:selectItem noSelectionOption="Selecione" itemValue = "Selecione a ficha"/>
                 <f:selectItems value="#{ProfessorFichaBean.fichasNomes}" />
             </h:selectOneMenu><br/><br/>
             <h:commandButton value="Gerar PDF" immediate="true" action="#{ProfessorFichaBean.printFicha(ProfessorFichaBean.fichaSelecionada,ProfessorFichaBean.alunoSelecionado)}"/>
