--- a/Academia/web/relatorioGeral.xhtml
+++ b/Academia/web/relatorioGeral.xhtml
@@ -50,8 +50,9 @@
                     </div>
                 </div>
                 
-                
-                <p:commandButton value="Gerar PDF" immediate="true" action="#{RelatorioGeralBean.printToPDF}"/>
+                <h:form>
+                    <p:commandButton value="Gerar PDF" immediate="true" action="#{RelatorioGeralBean.printToPDF}"/>
+                </h:form>
         </form>
     </h:body>
 </html>
